# slotted-egraphs

./: .gitignore  .tmp2.swp  Cargo.toml  all_test_results.json  heaptrack.entry-36fa62a2ee92b610.102064.zst  heaptrack.entry-36fa62a2ee92b610.102300.zst  heaptrack.entry-36fa62a2ee92b610.102722.zst  heaptrack.entry-36fa62a2ee92b610.103183.zst  heaptrack.entry-78c4a838346e1ec6.10357.zst  heaptrack.entry-78c4a838346e1ec6.12321.zst  heaptrack.entry-78c4a838346e1ec6.12900.zst  heaptrack.entry-78c4a838346e1ec6.14756.zst  heaptrack.entry-78c4a838346e1ec6.15507.zst  heaptrack.entry-78c4a838346e1ec6.16056.zst  heaptrack.entry-78c4a838346e1ec6.16722.zst  heaptrack.entry-78c4a838346e1ec6.29615.zst  heaptrack.entry-78c4a838346e1ec6.34568.zst  heaptrack.entry-78c4a838346e1ec6.4070.zst  heaptrack.entry-78c4a838346e1ec6.4812.zst  heaptrack.entry-78c4a838346e1ec6.4858.zst  heaptrack.entry-78c4a838346e1ec6.5960.zst  heaptrack.entry-78c4a838346e1ec6.9696.zst  log  log.txt  pairingPaperArray.svg.copy  plot_sat_count.py  results.py  run.sh  runArith.sh  rustc-ice-2025-12-25T16_22_16-240027.txt  tmp  tmp.py  tmp.txt  tmp1  tmp1.txt  tmp2  tmp2.txt  tmp3  tmp3.txt  tmp4.txt  (+1 more)
benches/: sdql.rs
chc/: product.py
slotted-egraphs-derive/: Cargo.toml
slotted-egraphs-derive/src/: lib.rs  rustc-ice-2025-12-25T16_22_16-239784.txt
src/: debug.rs  hashuf.rs  lang.rs  lib.rs  logger.rs  main.rs  parse.rs  permute.rs  rustc-ice-2026-04-13T11_23_30-264303.txt  slot.rs  slotmap.rs  types.rs
src/egraph/: add.rs  analysis.rs  check.rs  eclass.rs  find.rs  mod.rs  print.rs  rebuild.rs  shape.rs  symmetries.rs  union.rs
src/explain/: flat.rs  front.rs  proof.rs  registry.rs  show.rs
src/extract/: mod.rs
src/group/: mod.rs  tst.rs
src/rewrite/: ematch.rs  mod.rs  pattern.rs  subst_method.rs
src/run/: report.rs  run.rs  runner.rs
tests/: entry.rs
tests/arith/: const_prop.rs  mod.rs  tst.rs
tests/arith2/: mod.rs  rewrite.rs  tst.rs  tst_canonical.rs
tests/array/: mod.rs
tests/chc/: analysis.rs  and_test.rs  convert.py  ematchQuery.rs  langCHC.rs  leafDrop.rs  leafDrop2.rs  mod.rs  pairingPaperArray.rs  pairingPaperArray2.rs  prologInp.txt  prologInp.txt_rust  prologInp2.txt  rewrite.rs  rustc-ice-2025-12-29T09_42_31-52353.txt  rustc-ice-2025-12-29T09_42_34-52435.txt  rustc-ice-2025-12-30T09_25_09-61192.txt  rustc-ice-2025-12-30T10_41_04-83345.txt  (+10 more)
tmpTest/: Cargo.toml  prologInp.txt
(+63 files in other folders)
