[package]
name = "slotted-egraphs"
version = "0.0.36"
edition = "2021"
description = "E-Graphs with name binding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/memoryleak47/slotted-egraphs/"

[features]
explanations = []
checks = []
profiling = []
newShape = []
# default = ["newShape"]
default = ["checks", "newShape"]
# default = ["checks"]
# default = []

[package.metadata.docs.rs]
features = ["explanations"]

[dependencies]
#slotted-egraphs-derive = "=0.0.36"
slotted-egraphs-derive = { path = "slotted-egraphs-derive" }
symbol_table = { version = "0.3", features = ["global"] }
rustc-hash = "2.1.1"
vec-collections = "0.4.3"
smallvec = "1.14.0"
serial_test = "1.0"
log = "0.4.28"
env_logger = "0.11.8"
derive_more = { version = "2.0.1", features = ["debug"] }
either = "1.15.0"
log-derive = "0.4.1"
union-find = "0.4.3"
nauty-Traces-sys = "0.10"
regex = "1.12.2"
rustsat = "0.7.5"
rustsat-cadical = "0.7.5"
rustsat-minisat = "0.7.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[profile.release]
debug = "line-tables-only"


[profile.bench]
debug = true

[[bench]]
name = "sdql"
harness = false

[lints]
rust.non_snake_case = "allow"
